test/patterns/negative/ambiguous.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel
                    {| y = f x
    ensures match x with
    | _ | _ when x = 1 -> true
    | _ -> false |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
    ensures ...
     *)
File "ambiguous.mli", line 3, characters 12-72:
Error: Ambiguous or-pattern under guard.
